# rust-multichain-bot

./: .copilotignore  .gitattributes  .gitignore  README.md  justfile
.github/: copilot-instructions.md
@chain/: lib.rs
@chain/ethereum/: lib.rs  mod.rs
@env/: lib.rs
@env/local/: mod.rs
@strategy/: lib.rs
@strategy/atomic_arb/: mod.rs
config/chain/: lib.rs
config/chain/hyperevm/: lib.rs  mod.rs
config/env/: lib.rs
config/env/local/: lib.rs
config/env/remote/: lib.rs  mod.rs
config/strategy/: lib.rs
config/strategy/atomic_arb/: lib.rs
config/strategy/liquidator/: lib.rs  mod.rs
frontend/: package.json
onchain/contracts/: README.md
runtime/1_master/: .env.example
runtime/2_worker/: Dockerfile  docker-compose.yml
runtime/2_worker/src/: di.rs  main.rs
runtime/3_proxy/: wrangler.toml
runtime/master/: package.json
runtime/seeker/: Dockerfile
runtime/worker/: .env.example  Cargo.toml  Dockerfile  config.toml  docker-compose.yml
runtime/worker/module/: lib.rs
runtime/worker/module/uniswap/: lib.rs
runtime/worker/src/: di.rs  lib.rs  main.rs  traits.rs
runtime/worker/src/chain/: mod.rs
runtime/worker/src/chain/ethereum/: mod.rs
runtime/worker/src/chain/hyperevm/: mod.rs
runtime/worker/src/env/: mod.rs
runtime/worker/src/env/local/: mod.rs
runtime/worker/src/env/vps/: mod.rs
runtime/worker/src/module/: mod.rs
runtime/worker/src/module/lifi/: build_tx.rs  find_routes.rs  mod.rs
runtime/worker/src/strategy/: mod.rs
runtime/worker/src/strategy/atomic_arb/: mod.rs
runtime/worker/src/strategy/liquidator/: mod.rs
(+8 files in other folders)
