[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
toml = "0.5"
hex = "0.4"
alloy-primitives = { version = "1.2", features = ["serde"] }
k256 = { version = "0.13", features = ["ecdsa"] }
